spring cleaning
- resolved some code warnings
- ran code cleanup