@@ -1,5 +1,12 @@
 package fyi.sorenneedscoffee.aurora.effects.laser;
 
+import org.apache.commons.lang.Validate;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.entity.Player;
+import org.bukkit.plugin.Plugin;
+import org.bukkit.scheduler.BukkitRunnable;
+
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -8,27 +15,17 @@ import java.util.Collection;
 import java.util.HashSet;
 import java.util.UUID;
 
-import org.apache.commons.lang.Validate;
-import org.bukkit.Bukkit;
-import org.bukkit.Location;
-import org.bukkit.entity.Player;
-import org.bukkit.plugin.Plugin;
-import org.bukkit.scheduler.BukkitRunnable;
-
 /**
  * A whole class to create Guardian Beams by reflection </br>
  * Inspired by the API <a href="https://www.spigotmc.org/resources/guardianbeamapi.18329">GuardianBeamAPI</a></br>
  * <b>1.9 -> 1.15</b>
  *
- * @see <a href="https://github.com/SkytAsul/GuardianBeam">GitHub page</a>
  * @author SkytAsul
+ * @see <a href="https://github.com/SkytAsul/GuardianBeam">GitHub page</a>
  */
 class Laser {
     private final int duration;
     private final int distanceSquared;
-    private Location start;
-    private Location end;
-
     private final Object createGuardianPacket;
     private final Object createSquidPacket;
     private final Object teamAddPacket;
@@ -36,19 +33,20 @@ class Laser {
     private final Object metadataPacketGuardian;
     private final Object metadataPacketSquid;
     private final Object fakeGuardianDataWatcher;
-
     private final int squid;
     private final UUID squidUUID;
     private final int guardian;
     private final UUID guardianUUID;
-
+    private final HashSet<Player> show = new HashSet<>();
+    private Location start;
+    private Location end;
     private BukkitRunnable run;
-    private HashSet<Player> show = new HashSet<>();
 
     /**
      * Create a Laser instance
-     * @param start Location where laser will starts
-     * @param end Location where laser will ends
+     *
+     * @param start    Location where laser will starts
+     * @param end      Location where laser will ends
      * @param duration Duration of laser in seconds (<i>-1 if infinite</i>)
      * @param distance Distance where laser will be visible
      */
@@ -92,13 +90,13 @@ class Laser {
                                 sendStartPackets(p);
                                 show.add(p);
                             }
-                        }else if (show.contains(p)) {
+                        } else if (show.contains(p)) {
                             Packets.sendPacket(p, destroyPacket);
                             show.remove(p);
                         }
                     }
                     if (time != -1) time--;
-                }catch (ReflectiveOperationException e) {
+                } catch (ReflectiveOperationException e) {
                     e.printStackTrace();
                 }
             }
@@ -110,7 +108,7 @@ class Laser {
                     for (Player p : show) {
                         Packets.sendPacket(p, destroyPacket);
                     }
-                }catch (ReflectiveOperationException e) {
+                } catch (ReflectiveOperationException e) {
                     e.printStackTrace();
                 }
                 run = null;
@@ -148,7 +146,7 @@ class Laser {
         return end;
     }
 
-    public void callColorChange() throws ReflectiveOperationException{
+    public void callColorChange() throws ReflectiveOperationException {
         for (Player p : show) {
             Packets.sendPacket(p, metadataPacketGuardian);
         }
@@ -175,17 +173,11 @@ class Laser {
     }
 
 
-
     private static class Packets {
+        private static final int version = Integer.parseInt(Bukkit.getServer().getClass().getPackage().getName().replace(".", ",").split(",")[3].substring(1).split("_")[1]);
+        private static final String npack = "net.minecraft.server." + Bukkit.getServer().getClass().getPackage().getName().replace(".", ",").split(",")[3] + ".";
+        private static final String cpack = Bukkit.getServer().getClass().getPackage().getName() + ".";
         private static int lastIssuedEID = 2000000000;
-
-        static int generateEID() {
-            return lastIssuedEID++;
-        }
-
-        private static int version = Integer.parseInt(Bukkit.getServer().getClass().getPackage().getName().replace(".", ",").split(",")[3].substring(1).split("_")[1]);
-        private static String npack = "net.minecraft.server." + Bukkit.getServer().getClass().getPackage().getName().replace(".", ",").split(",")[3] + ".";
-        private static String cpack = Bukkit.getServer().getClass().getPackage().getName() + ".";
         private static Object packetTeamCreate;
         private static Constructor<?> watcherConstructor;
         private static Method watcherSet;
@@ -201,7 +193,6 @@ class Laser {
         private static Object watcherObject3; // attack id
         private static int squidID;
         private static int guardianID;
-
         private static Object fakeSquid;
         private static Object fakeSquidWatcher;
 
@@ -214,19 +205,19 @@ class Laser {
                     watcherName3 = "bB";
                     squidID = 94;
                     guardianID = 68;
-                }else if (version == 13) {
+                } else if (version == 13) {
                     watcherName1 = "ac";
                     watcherName2 = "bF";
                     watcherName3 = "bG";
                     squidID = 70;
                     guardianID = 28;
-                }else if (version == 14) {
+                } else if (version == 14) {
                     watcherName1 = "W";
                     watcherName2 = "b";
                     watcherName3 = "bD";
                     squidID = 73;
                     guardianID = 30;
-                }else if (version > 14) {
+                } else if (version > 14) {
                     watcherName1 = "T";
                     watcherName2 = "b";
                     watcherName3 = "bA";
@@ -247,21 +238,25 @@ class Laser {
                 packetTeam = Class.forName(npack + "PacketPlayOutScoreboardTeam");
                 packetMetadata = Class.forName(npack + "PacketPlayOutEntityMetadata");
 
-                packetTeamCreate = packetTeam.newInstance();
+                packetTeamCreate = packetTeam.getDeclaredConstructor().newInstance();
                 setField(packetTeamCreate, "a", "noclip");
                 setField(packetTeamCreate, "i", 0);
                 setField(packetTeamCreate, "f", "never");
 
                 Object world = Class.forName(cpack + "CraftWorld").getDeclaredMethod("getHandle").invoke(Bukkit.getWorlds().get(0));
-                Object[] entityConstructorParams = version < 14 ? new Object[] { world } : new Object[] { Class.forName(npack + "EntityTypes").getDeclaredField("SQUID").get(null), world };
+                Object[] entityConstructorParams = version < 14 ? new Object[]{world} : new Object[]{Class.forName(npack + "EntityTypes").getDeclaredField("SQUID").get(null), world};
                 fakeSquid = getMethod(Class.forName(cpack + "entity.CraftSquid"), "getHandle").invoke(Class.forName(cpack + "entity.CraftSquid").getDeclaredConstructors()[0].newInstance(
                         null, Class.forName(npack + "EntitySquid").getDeclaredConstructors()[0].newInstance(
                                 entityConstructorParams)));
                 fakeSquidWatcher = createFakeDataWatcher();
                 tryWatcherSet(fakeSquidWatcher, watcherObject1, (byte) 32);
-            }catch (ReflectiveOperationException e) {
+            } catch (ReflectiveOperationException e) {
                 e.printStackTrace();
             }
+        }
+
+        static int generateEID() {
+            return lastIssuedEID++;
         }
 
         public static void sendPacket(Player p, Object packet) throws ReflectiveOperationException {
@@ -281,7 +276,7 @@ class Laser {
         }
 
         public static Object createPacketSquidSpawn(Location location) throws ReflectiveOperationException {
-            Object packet = packetSpawn.newInstance();
+            Object packet = packetSpawn.getDeclaredConstructor().newInstance();
             setField(packet, "a", generateEID());
             setField(packet, "b", UUID.randomUUID());
             setField(packet, "c", squidID);
@@ -295,7 +290,7 @@ class Laser {
         }
 
         public static Object createPacketGuardianSpawn(Location location, Object watcher, int squidId) throws ReflectiveOperationException {
-            Object packet = packetSpawn.newInstance();
+            Object packet = packetSpawn.getDeclaredConstructor().newInstance();
             setField(packet, "a", generateEID());
             setField(packet, "b", UUID.randomUUID());
             setField(packet, "c", guardianID);
@@ -312,13 +307,13 @@ class Laser {
         }
 
         public static Object createPacketRemoveEntities(int squidId, int guardianId) throws ReflectiveOperationException {
-            Object packet = packetRemove.newInstance();
-            setField(packet, "a", new int[] { squidId, guardianId });
+            Object packet = packetRemove.getDeclaredConstructor().newInstance();
+            setField(packet, "a", new int[]{squidId, guardianId});
             return packet;
         }
 
         public static Object createPacketMoveEntity(Location location, int entityId) throws ReflectiveOperationException {
-            Object packet = packetTeleport.newInstance();
+            Object packet = packetTeleport.getDeclaredConstructor().newInstance();
             setField(packet, "a", entityId);
             setField(packet, "b", location.getX());
             setField(packet, "c", location.getY());
@@ -330,7 +325,7 @@ class Laser {
         }
 
         public static Object createPacketTeamAddEntities(UUID squidUUID, UUID guardianUUID) throws ReflectiveOperationException {
-            Object packet = packetTeam.newInstance();
+            Object packet = packetTeam.getDeclaredConstructor().newInstance();
             setField(packet, "a", "noclip");
             setField(packet, "i", 3);
             Collection<String> players = (Collection<String>) getField(packetTeam, "h", packet);
@@ -346,7 +341,7 @@ class Laser {
         private static void tryWatcherSet(Object watcher, Object watcherObject, Object watcherData) throws ReflectiveOperationException {
             try {
                 watcherSet.invoke(watcher, watcherObject, watcherData);
-            }catch (InvocationTargetException ex) {
+            } catch (InvocationTargetException ex) {
                 watcherRegister.invoke(watcher, watcherObject, watcherData);
                 if (version >= 15) watcherDirty.invoke(watcher, watcherObject);
             }
